name: parsets
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
maintainer: teo@nullable.se
category: Development
author: Teo Klestrup
data-dir: ""

executable parsets
    build-depends: base >=4.7 && <4.8,
                   parsec >=3.1.9 && <3.2,
                   text >=1.1 && <1.2,
                   mtl >=2.1.3 && <2.2,
                   aeson >=0.9 && <0.10,
                   unordered-containers >=0.2.5 && <0.3,
                   bytestring >=0.10.4 && <0.11
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    default-extensions: OverloadedStrings,
                        FlexibleInstances
    hs-source-dirs: src
    other-modules: Language.TorqueScript.AST
                   Language.TorqueScript.Tokens
                   Language.TorqueScript.Tokenizer
                   Language.TorqueScript.Parser
                   Language.TorqueScript.Analysis
                   Language.TorqueScript.Rules
                   Language.TorqueScript
